test/parsing/errors/ternaryCompare.chpl
config const n = 3;
proc main() {
  if 0 <= n <= 2 {
    writeln("0 <= n <= 2, n=", n);
  }
}
