test/parsing/errors/ternaryCompare.good
ternaryCompare.chpl:3: syntax error: near '<='
